# TacticalRPG

./: .gitignore  CMakeLists.txt  README.md  TacticalRPG.sln  TacticalRPG.vcxproj  TacticalRPG.vcxproj.filters  TacticalRPGcpp  TacticalRPGcpp.sln  TacticalRPGcpp.vcxproj  TacticalRPGcpp.vcxproj.filters  WindowClass.cpp
SAE-Tactical/include/: Fenetre.hpp  Plateau.hpp  Position.hpp
SAE-Tactical/src/: Fenetre.cpp  Plateau.cpp  Position.cpp  main.cpp
doc/html/: _animation_8hpp_source.html  _animation_manager_8hpp_source.html  _application_8hpp_source.html  _archer_8hpp_source.html  _axe_skill_8hpp_source.html  _burn_8hpp_source.html  _button_8hpp_source.html  _character_8hpp_source.html  _constants_8hpp_source.html  _effect_8hpp_source.html  _entities_8hpp_source.html  _entity_8hpp_source.html  _entity_sprite_8hpp_source.html  _fireball_8hpp_source.html  _grid_8hpp_source.html  _healer_8hpp_source.html  _intro_state_8hpp_source.html  _knight_8hpp_source.html  _mage_8hpp_source.html  _magic_character_8hpp_source.html  _magical_skill_8hpp_source.html  _skill_8hpp_source.html  (+369 more)
include/: Constants.hpp  Effect.hpp  Entities.hpp  Entity.hpp  Grid.hpp  Grid.hpp.gch  Position.hpp  Skill.hpp  Skills.hpp  network.hpp
lib/: sfml-audio-d.lib  sfml-audio.lib  sfml-graphics-d.lib  sfml-graphics.lib  sfml-main-d.lib  sfml-main.lib  sfml-network-d.lib  sfml-window.lib
src/: Effect.cpp  Entity.cpp  Grid.cpp  Position.cpp  Skill.cpp  main.cpp
test/: animations.fbs  animations.json  animations.json.old  backup.json  textures.fbs  textures.json
tools/: animations.fbs  animations.json
(+330 files in other folders)
